# bob-server-display

./: .gitignore  Cargo.toml  README.md  build.rs  sway-config
.github/workflows/: ci.yml
bob-display-core/: Cargo.toml
bob-display-core/src/: config.rs  display.rs  lib.rs  render.rs
config/: default.toml
examples/iced_test/: Cargo.toml  README.md  sway-config
examples/iced_test/src/: gpu_renderer.rs  main.rs
examples/slint_test/: Cargo.toml  build.rs
examples/slint_test/src/: main.rs
examples/slint_test/ui/: main_window.slint
examples/test_display/: Cargo.toml  README.md
examples/test_display/config/: default.toml
examples/test_display/src/: main.rs
scripts/: install.sh
src/: backlight.rs  config.rs  display.rs  display_control.rs  main.rs  render.rs  system.rs  view.rs  wave_chart.rs
systemd/: bob-display.service
