[package]
name = "bob-display"
version = "0.1.0"
edition = "2021"
authors = ["Simon Duchastel <simon@duchastel.com>"]
license = "MIT"
description = "Bob Display - Kiosk UI for Simon's personal server"

[[bin]]
name = "bob-display"
path = "src/main.rs"

[dependencies]
# Iced GUI framework with GPU-accelerated wgpu backend
iced = { version = "0.13", features = ["wgpu", "advanced", "tokio"] }

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }

# System information for CPU, RAM, network, temperature
sysinfo = "0.33"
