[package]
name = "bob-display-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core library for Bob Display - DRM/KMS rendering and display management"

[dependencies]
# DRM/KMS for direct display access
drm = "0.12"
gbm = { version = "0.15", default-features = false, features = ["drm-support"] }

# Image handling
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

# Logging
tracing = "0.1"

# Error handling
anyhow = "1.0"

# System signals
libc = "0.2"