[package]
name = "iced-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Iced GUI test with GPU rendering and DRM/KMS display"

[[bin]]
name = "iced-test"
path = "src/main.rs"

[dependencies]
# Iced GUI framework - using wgpu for GPU rendering
iced = { version = "0.13", default-features = false, features = ["wgpu"] }
iced_wgpu = { version = "0.13", default-features = false }

# wgpu for GPU rendering
wgpu = { version = "23.0", default-features = false, features = ["vulkan", "gles"] }

# DRM/KMS display support through bob-display-core
bob-display-core = { path = "../../bob-display-core" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Error handling
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Time for animations
chrono = "0.4"

# Pollster for async block on
pollster = "0.3"

# Raw window handle (for KMS integration)
raw-window-handle = "0.6"
