[package]
name = "iced-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Iced GUI test with GPU-accelerated windowing"

[[bin]]
name = "iced-test"
path = "src/main.rs"

[dependencies]
# Iced GUI framework with GPU-accelerated wgpu backend
# Uses Vulkan/OpenGL ES on Linux - perfect for Pi 4/5
iced = { version = "0.13", features = ["wgpu", "image", "tokio"] }

# Async runtime
tokio = { version = "1.35", features = ["rt-multi-thread", "macros"] }
