[package]
name = "slint-test"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Slint test with software rendering and DRM/KMS display"

[[bin]]
name = "slint-test"
path = "src/main.rs"

[build-dependencies]
slint-build = "1.8"

[dependencies]
slint = { version = "1.8", default-features = false, features = ["std", "renderer-software", "compat-1-2", "backend-linuxkms"] }

# Error handling
anyhow = "1.0"