[package]
name = "test-display"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Simple test display that prints TEST repeatedly"

[[bin]]
name = "test-display"
path = "src/main.rs"

[dependencies]
bob-display-core = { path = "../../bob-display-core" }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal", "time"] }

# System signals
libc = "0.2"